# pymupdf4llm-C

./: .clang-format  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .zshenter  .zshexit  BUILD.md  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README_STANDALONE.md  _acme.pdf.txt  _py_acme.pdf.txt  acme_enhanced.md  acme_enhanced_tables.md  build.py  build.sh  compare-md.py  get_raw_lines  get_raw_lines.c  get_text_lines.py  lint.sh  multi_column.py  new.md  nist.md  old_to_md.pyx  original_acme.md  original_to_md.py  original_to_md.pyi  pymupdf_rag.py  pyproject.toml  requirements.txt  ruff.toml  run_to_md.py  setup.py  setup_c.py  setup_full_c.py  (+16 more)
.cache/clangd/index/: get_raw_lines.c.DCCF1024004AB3F6.idx  multicolumn.c.24DC13719069A6EE.idx  multicolumn.h.E91BB99D58C48ACA.idx  table.c.04437D9075778800.idx  to_md.c.175B2708729F6ED0.idx
.github/workflows/: buildwinmac.yml  publish.yml
_codeql_build_dir/: Makefile  cmake_install.cmake
examples/: json_to_md.py
fibrum_pdf/: __init__.py
go/: go.mod  go.sum  main
go/cmd/tomd/: main.go
go/internal/bridge/: bridge.c  bridge.go  bridge.h  bridge_test.go
go/internal/column/: column.go
go/internal/extractor/: cleanup.go  extractor.go  extractor_test.go
go/internal/geometry/: geometry.go
go/internal/logger/: logger.go
go/internal/models/: models.go
go/internal/table/: table.go  table_test.go
go/internal/testutil/: testutil.go
go/internal/text/: text.go  text_test.go
include/: block_info.h  buffer.h  column_detector.h  font_metrics.h  get_raw_lines.h  improved_table_detection.h  list.h  multicolumn.h  page_extractor.h  platform_compat.h  serialize.h  spatial_hash.h  table.h  table_extraction.h  text_utils.h  utils.h
lib/mupdf/: include
ms-demo/: acme.md  acme2.md  grp.md
pymupdf4llm/: multi_column.py  new_table.py  new_table_fixed.py  test-tables.py
pymupdf4llm-c/: Cargo.toml  build.rs
pymupdf4llm-c/src/: lib.rs  main.rs
pymupdf4llm_c/: __init__.py  _block_converter.py  _cffi.py  _lib.py  api.py  config.py  geometry_utils.py  globals.py  logging_config.py  main.py  models.py  multi_column.py  pymupdf_rag.py  table.py  utils.py  wrappers.py
pymupdf4llm_c.egg-info/: PKG-INFO  SOURCES.txt
resume/: page_001.json
scripts/: count_tables.py  one_page_md.py  restore.sh  test.py  test_st.py  unicode.py
src/: block_info.c  buffer.c  column_detector.c  font_metrics.c  get_raw_lines.c  improved_table_detection.c  list.c  multicolumn.c  page_extractor.c  serialize.c  spatial_hash.c  table.c  text_utils.c  to_md.c  utils.c
src/table/: table_capture.c  table_capture.h  table_core.c  table_grid.c  table_grid.h  table_horizontal.c  table_horizontal.h  table_two_column.c  table_two_column.h  table_utils.c  table_utils.h
tests/: .gitignore  README.md  __init__.py  manual_test.py  pdf_fixtures.py  qtest.py  report.html  test_api_enhancements.py  test_basic.py  test_config.py  test_conversion.py  test_smoke.py
tests/baseline/: run_baseline.py
tests/test_data/: bad_sample.md  sample_with_table.pdf.md
to_md_c/: Makefile  Qwen.md  a.out  acme.md  get_raw_lines.c  get_raw_lines.h  get_raw_markdown  improved_table_detection.c  improved_table_detection.h  multi_column.py  multicolumn.c  multicolumn.h  nist.md  oo.md  ooo.md  pymupdf_rag.py  reconstruct_table.c  smth  smth.c  t.md  table  table.c  table.py  test-likely-table.py  test_optimized.md  test_table_detection  test_table_detection.c  to_md  to_md.c  to_md_optimized  to_md_standalone_clean.c  to_md_test.c  utils.py
to_md_c/__pycache__/: pymupdf_rag.is_significant_numba-1010.py311.1.nbc  pymupdf_rag.is_significant_numba-1010.py311.nbi  pymupdf_rag.is_significant_numba-1012.py311.1.nbc  pymupdf_rag.is_significant_numba-1012.py311.nbi  pymupdf_rag.is_significant_numba-1019.py311.1.nbc  pymupdf_rag.is_significant_numba-1019.py311.nbi  pymupdf_rag.is_significant_numba-1028.py311.1.nbc  pymupdf_rag.is_significant_numba-1028.py311.nbi  pymupdf_rag.is_significant_numba-1047.py311.1.nbc  pymupdf_rag.is_significant_numba-1047.py311.nbi  pymupdf_rag.is_significant_numba-1057.py311.1.nbc  pymupdf_rag.is_significant_numba-1057.py311.nbi  pymupdf_rag.is_significant_numba-1058.py311.1.nbc  pymupdf_rag.is_significant_numba-1058.py311.nbi  pymupdf_rag.is_significant_numba-1058.py313.1.nbc  pymupdf_rag.is_significant_numba-1058.py313.nbi  pymupdf_rag.is_significant_numba-1063.py311.1.nbc  pymupdf_rag.is_significant_numba-1063.py311.nbi  pymupdf_rag.is_significant_numba-1065.py311.1.nbc  pymupdf_rag.is_significant_numba-1065.py311.nbi  pymupdf_rag.is_significant_numba-1065.py313.1.nbc  pymupdf_rag.is_significant_numba-1065.py313.nbi  pymupdf_rag.is_significant_numba-1067.py313.1.nbc  pymupdf_rag.is_significant_numba-1067.py313.nbi  pymupdf_rag.is_significant_numba-1068.py311.1.nbc  pymupdf_rag.is_significant_numba-1068.py311.nbi  pymupdf_rag.is_significant_numba-1068.py313.1.nbc  pymupdf_rag.is_significant_numba-1068.py313.nbi  pymupdf_rag.is_significant_numba-1076.py311.1.nbc  pymupdf_rag.is_significant_numba-1076.py311.nbi  pymupdf_rag.is_significant_numba-1078.py311.1.nbc  pymupdf_rag.is_significant_numba-1078.py311.nbi  pymupdf_rag.is_significant_numba-1085.py313.1.nbc  pymupdf_rag.is_significant_numba-1085.py313.nbi  pymupdf_rag.is_significant_numba-1086.py311.1.nbc  pymupdf_rag.is_significant_numba-1086.py311.nbi  pymupdf_rag.is_significant_numba-1088.py311.1.nbc  pymupdf_rag.is_significant_numba-1088.py311.nbi  pymupdf_rag.is_significant_numba-1089.py311.1.nbc  pymupdf_rag.is_significant_numba-1089.py311.nbi  (+328 more)
wip/: multicolumn.c  table.c
