[package]
name = "pymupdf4llm-c"
version = "0.1.0"
edition = "2024"
authors = ["Adit Bajaj"]
description = "Inspired by `pymupdf4llm`, implements a C extractor that outputs high-quality Markdown/JSON."
license = "AGPL-3.0"
repository = "https://github.com/intercepted16/pymupdf4llm-C"
readme = "README.md"
keywords = ["pdf", "json", "extraction", "bindings"]
categories = ["parsing", "text-processing"]
publish = true

[dependencies]
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
num_cpus = "1.17.0"
cmake = "0.1.54"

# Binary target
[[bin]]
name = "pdf_to_json"
path = "src/main.rs"

# Include C source files and build scripts for packaging
include = [
    "src/**/*.rs",
    "c_src/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
